# docs/swagger.yaml
@@ -29,6 +29,8 @@ definitions:
         type: string
       timestamp:
         type: string
+      user_id:
+        type: string
     type: object
   models.User:
     properties:
@@ -205,6 +207,11 @@ paths:
         name: tiger_id
         required: true
         type: string
+      - description: User ID
+        in: formData
+        name: user_id
+        required: true
+        type: string
       - description: Timestamp Format yyyy-mm-dd hh:mm:ss
         in: formData
         name: timestamp
@@ -320,6 +327,22 @@ paths:
       - application/json
       responses: {}
       summary: Update a tiger sighting
+      tags:
+      - TigerSighting-Controller
+  /tigerSighting/v1/user_sightings/{tigerId}:
+    get:
+      consumes:
+      - '*/*'
+      parameters:
+      - description: tigerId
+        in: path
+        name: tigerId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Get all user sightings for a tiger
       tags:
       - TigerSighting-Controller
   /user/v1/create_new:
